fix:array of numbers not showing when difficulty is medium

--- a/presentation-layer/src/containers/GameInfo/GameInfo.css
+++ b/presentation-layer/src/containers/GameInfo/GameInfo.css
@@ -7,7 +7,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color:var(--danger)
+    color:var(--danger);
+    font-weight: bolder;
 }
 
 .GameInfo__heading{
